[metadata]
name = graph-distribution-mcguire
version = 0.0.1
author = Tommy M. McGuire
author_email = mcguire@crsr.net
description = Given a sequence of data values, graph it as a histogram and draw corresponding random distributions on it
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmmcguire/graph_distribution
project_urls =
    Bug Tracker = https://github.com/tmmcguire/graph_distribution/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy

[options.packages.find]
where = src